# RecompRandoGlue

./: .gitmodules  CMakeLists.txt  PythonStandalone_Linux_x64.cmake  PythonStandalone_Win_x64.cmake  apcpp-glue.cpp  apcpp-glue.h  apcpp-solo-gen.cpp  apcpp-solo-gen.h  apcpp-yaml-config-exports.cpp  requirements.txt
minipelago/: package.py
minipelago/dummy_modules/: asyncio.py  socket.py
minipelago/dummy_modules/email/: message.py
minipelago/dummy_modules/http/: client.py
minipelago/scripts/: MMGenerate.py
